# solana

./: CLAUDE.md  README.md
reports/: AUDIT_REPORT.md  TEST_COVERAGE_REPORT.md
staking/: .env.example  .gitignore  Anchor.toml  package.json  staking.sol
staking/docs/: DEPLOYMENT.md  MAINNET_DEPLOYMENT.md  TOKEN_SETUP.md
staking/programs/staking/: Cargo.toml
staking/programs/staking/src/: constants.rs  errors.rs  events.rs  lib.rs
staking/programs/staking/src/instructions/: admin.rs  initialize.rs  mod.rs  pause.rs  stake.rs  unpause.rs  unstake.rs
staking/programs/staking/src/state/: mod.rs  state.rs  user_stake.rs
staking/scripts/: OVERVIEW.md  check-unstakeable.ts  initialize-devnet.ts  initialize-mainnet.ts  testnet-demo.ts  unstake.ts  verify-state.ts
staking/tests/: staking.ts
