[package]
name = "staking"
version = "0.1.0"
description = "Stake FIGHT tokens with owner-controlled pause functionality"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# Network-specific builds (affects program ID)
testnet = []
mainnet = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
# Pin to avoid edition2024 incompatibility with Solana platform-tools
blake3 = "=1.5.5"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("testnet", "mainnet"))'] }
